<?xml version="1.0" encoding="utf-8"?><!--

/*
** The Digital Diary
** Copyright 2020, The Digital Diary
** Auther : Dharshini Y
**
*/

  -->

<resources>
  <string name="appName">Digital Diary</string>
  <string name="today">Today</string>
  <string name="prevEntry">Previous</string>
  <string name="nextEntry">Next</string>
  <string name="goToDate">Go to date…</string>
  <string name="search">Search…</string>
  <string name="findAll">Find all…</string>
  <string name="share">Share…</string>
  <string name="addTime">Add time</string>
  <string name="addEvents">Add events</string>
  <string name="addMedia">Add media…</string>
  <string name="editStyles">Edit styles…</string>
  <string name="editScript">Edit script…</string>
  <string name="backup">Backup</string>
  <string name="start">Start backup</string>
  <string name="complete">Backup complete</string>
  <string name="changes">Save changes?</string>
  <string name="save">Save</string>
  <string name="discard">Discard</string>
  <string name="settings">Settings</string>
  <string name="calendar">Calendar</string>
  <string name="pref_calendar">Use custom calendar</string>
  <string name="pref_calendar_summ">
    Use custom calendar rather than date picker
  </string>
  <string name="markdown">Markdown</string>
  <string name="pref_markdown">Use markdown</string>
  <string name="pref_markdown_summ">
    Use markdown to format entries
  </string>
  <string name="media">Media</string>
  <string name="pref_copy_media">Copy images</string>
  <string name="pref_copy_media_summ">
    Copy inserted images to the current folder
  </string>
  <string name="pref_external">Browser</string>
  <string name="pref_external_summ">
    Use browser for external links
  </string>
  <string name="folder">Folder</string>
  <string name="theme">Theme</string>
  <string name="pref_dark_theme">Dark</string>
  <string name="pref_dark_theme_summ">
    Use dark theme for editing
  </string>
  <string name="index">Index</string>
  <string name="pref_use_index">Use index</string>
  <string name="pref_use_index_summ">
    Use index page for journal
  </string>
  <string name="pref_index_page">Index page</string>
  <string name="template">Template</string>
  <string name="pref_use_template">Use template</string>
  <string name="pref_use_template_summ">
    Use template for diary entries
  </string>
  <string name="pref_template_page">Template page</string>
  <string name="about">About</string>
  <string name="pref_about_summ">Digital Diary Version 1.0.0 </string>
  <string name="built">Built %s</string>
  <string name="licence">Licence for College Project </string>
  <string name="copyright">Copyright \u00A9 2020 <a href="mailto:hola@josep-portella.com"> Dharshini Y </a>\n
    Copyright \u00A9 2020
  </string>
</resources>
