<?xml version="1.0" encoding="utf-8"?><!--

/*
** The Digital Diary
** Copyright 2020, The Digital Diary
** Auther : Dharshini Y
**
*/

  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <PreferenceCategory
      android:key="pref_custom_category"
      android:title="@string/calendar">

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="?attr/pref_calendar"
        android:key="pref_custom"
        android:persistent="true"
        android:summary="@string/pref_calendar_summ"
        android:title="@string/pref_calendar" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_markdown_category"
      android:title="@string/markdown">

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="?attr/pref_markdown"
        android:key="pref_markdown"
        android:persistent="true"
        android:summary="@string/pref_markdown_summ"
        android:title="@string/pref_markdown" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_folder_category"
      android:title="@string/folder">

    <EditTextPreference
        android:defaultValue="Diary"
        android:icon="?attr/pref_folder"
        android:key="pref_folder"
        android:persistent="true"
        android:title="@string/folder" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_index_category"
      android:title="@string/index">

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="?attr/pref_use_index"
        android:key="pref_use_index"
        android:persistent="true"
        android:summary="@string/pref_use_index_summ"
        android:title="@string/pref_use_index" />

    <org.dharshini.diary.DatePickerPreference
        android:dependency="pref_use_index"
        android:dialogIcon="?attr/pref_index_page"
        android:icon="?attr/pref_index_page"
        android:key="pref_index_page"
        android:title="@string/pref_index_page" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_template_category"
      android:title="@string/template">

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="?attr/pref_use_template"
        android:key="pref_use_template"
        android:persistent="true"
        android:summary="@string/pref_use_template_summ"
        android:title="@string/pref_use_template" />

    <org.dharshini.diary.DatePickerPreference
        android:dependency="pref_use_template"
        android:dialogIcon="?attr/pref_template_page"
        android:icon="?attr/pref_template_page"
        android:key="pref_template_page"
        android:title="@string/pref_template_page" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_media_category"
      android:title="@string/media">

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="?attr/pref_external"
        android:key="pref_external"
        android:persistent="true"
        android:summary="@string/pref_external_summ"
        android:title="@string/pref_external" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="?attr/pref_copy_media"
        android:key="pref_copy_media"
        android:persistent="true"
        android:summary="@string/pref_copy_media_summ"
        android:title="@string/pref_copy_media" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_theme_category"
      android:title="@string/theme">

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="?attr/pref_dark_theme"
        android:key="pref_dark_theme"
        android:persistent="true"
        android:summary="@string/pref_dark_theme_summ"
        android:title="@string/pref_dark_theme" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/about">

    <org.dharshini.diary.AboutPreference
        android:dialogIcon="?attr/pref_about"
        android:dialogLayout="@layout/about"
        android:icon="?attr/pref_about"
        android:key="pref_about"
        android:negativeButtonText=""
        android:summary="@string/pref_about_summ"
        android:title="@string/about" />

  </PreferenceCategory>

</PreferenceScreen>
