<?xml version="1.0" encoding="utf-8"?><!--

/*
** Copyright 2020, The Digital Diary
** Auther : Dharshini Y
**
*/

-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
  <item
      android:id="@+id/findAll"
      android:icon="@drawable/ic_action_search"
      android:showAsAction="ifRoom"
      android:title="@string/findAll"
      android:visible="false" />
  <item
      android:id="@+id/prevEntry"
      android:icon="@drawable/ic_action_previous"
      android:showAsAction="ifRoom"
      android:title="@string/prevEntry" />
  <item
      android:id="@+id/nextEntry"
      android:icon="@drawable/ic_action_next"
      android:showAsAction="ifRoom"
      android:title="@string/nextEntry" />
  <item
      android:id="@+id/today"
      android:icon="@drawable/ic_action_today"
      android:showAsAction="ifRoom"
      android:title="@string/today" />
  <item
      android:id="@+id/goToDate"
      android:icon="@drawable/ic_action_go_to_date"
      android:showAsAction="ifRoom"
      android:title="@string/goToDate" />
  <item
      android:id="@+id/index"
      android:icon="@drawable/ic_action_today"
      android:showAsAction="ifRoom"
      android:title="@string/index"
      android:visible="false" />
  <item
      android:id="@+id/search"
      android:actionViewClass="android.widget.SearchView"
      android:icon="@drawable/ic_action_search"
      android:showAsAction="ifRoom|collapseActionView"
      android:title="@string/search" />
  <item
      android:id="@+id/share"
      android:icon="@drawable/ic_action_share"
      android:showAsAction="ifRoom"
      android:title="@string/share" />
  <item
      android:id="@+id/addTime"
      android:icon="@drawable/ic_action_time"
      android:showAsAction="ifRoom"
      android:title="@string/addTime" />
  <item
      android:id="@+id/addEvents"
      android:icon="@drawable/ic_action_time"
      android:showAsAction="ifRoom"
      android:title="@string/addEvents" />
  <item
      android:id="@+id/addMedia"
      android:icon="@drawable/ic_action_picture"
      android:showAsAction="ifRoom"
      android:title="@string/addMedia" />
  <item
      android:id="@+id/editStyles"
      android:icon="@drawable/ic_action_save"
      android:showAsAction="ifRoom"
      android:title="@string/editStyles" />
  <item
      android:id="@+id/editScript"
      android:icon="@drawable/ic_action_save"
      android:showAsAction="ifRoom"
      android:title="@string/editScript" />
  <item
      android:id="@+id/backup"
      android:icon="@drawable/ic_action_save"
      android:showAsAction="ifRoom"
      android:title="@string/backup" />
  <item
      android:id="@+id/settings"
      android:icon="@drawable/ic_action_settings"
      android:showAsAction="ifRoom"
      android:title="@string/settings" />
</menu>
